...
    <string name="back_button">BACK</string>

    <string name="welcome_screen_three_msg">This mode allows you to use our specially formulated algorithm to predict the outcome of a fight</string>
    <string name="got_it_button">GOT IT</string>

    <string name="action_settings">Settings</string>
    <string name="contact_button">Contact</string>
    <string name="help_button">Help</string>
    <string name="create_algo">Create Algorithm</string>
    <string name="calc">Calculate</string>

    <string name="contact_message">Thank you for using MMA Fight Predictor! \n \n Have any questions or feedback? \n \n Feel free to contact us via the email below</string>
    <string name="email">sinnocure@gmail.com</string>

...
