<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/contact_msg"
        android:text="@string/contact_message"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400sp"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</FrameLayout>