...

    <ImageButton
        android:layout_width="170sp"
        android:layout_height="170sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:id="@+id/statsonly"
        android:onClick="onClickStatsOnly"
        android:background="@drawable/factslogo"
        android:contentDescription="@string/stats_only"
        android:layout_gravity="center_vertical|end"
        android:clickable="true"
        android:layout_marginRight="20sp" />

    <ImageButton
        android:layout_width="170sp"
        android:layout_height="170sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="20sp"
        android:id="@+id/opinionandstats"
        android:contentDescription="@string/yes_give_opinion"
        android:onClick="onClickOpinion"
        android:background="@drawable/opinionlogo"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:layout_marginLeft="20sp" />
...
