...

    <ImageButton
        android:layout_width="170sp"
        android:layout_height="170sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:id="@+id/calculate"
        android:onClick="onClickUseOurAlgorithm"
        android:contentDescription="@string/calc"
        android:background="@drawable/calculatelogo"
        android:layout_gravity="center_vertical|end"
        android:clickable="true"
        android:layout_marginRight="20sp" />
...
