...
        android:layout_gravity="top|center"
        android:id="@+id/opinionwrestling"
        android:max="4"
        android:layout_marginTop="420sp" />

    <Button
        android:id="@+id/gobuttonopinion"
        android:text="@string/predict"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/button_style"
...
